# datascipsych-refactor

./: .gitignore  convert.py  pyproject.toml
jupyter/: exploration.ipynb
src/refactor/: __init__.py  analysis.py
src/refactor/data/: data.csv
