[project]
name = "refactor"
version = "0.1.0"
description = "Code project to demonstrate refactoring methods."
readme = "README.md"
authors = [
    { name = "Neal Morton", email = "mortonne@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datascipsych",
    "fastexcel>=0.20.1",
    "jupyter>=1.1.1",
    "polars>=1.40.1",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
datascipsych = { git = "https://github.com/mortonne/datascipsych" }
